# KMedia

./: .gitmodules  README.md  build.gradle  settings.gradle
Kffsdl/app/: CMakeLists.txt  build.gradle
Kffsdl/app/libs/arm64-v8a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
Kffsdl/app/libs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
Kffsdl/app/libs/ffmpeg/include/libavutil/: ffversion.h
Kffsdl/app/src/main/: AndroidManifest.xml
Kffsdl/app/src/main/cpp/: native_lib.cpp  native_lib.h
Kffsdl/app/src/main/cpp/sdl2/: SDL_log.c
Kffsdl/app/src/main/java/com/ffsdl/kmedia/: HomeActivity.java  KMediaPlayer.java
Kffsdl/app/src/main/java/org/libsdl/app/: HIDDeviceBLESteamController.java  HIDDeviceManager.java  HIDDeviceUSB.java  SDLActivity.java
Kffsdl/app/src/main/res/layout/: activity_home.xml
Player/: settings.gradle
Player/AndroidCommon/: build.gradle
Player/AndroidCommon/src/androidTest/java/com/free/androidcommon/: ExampleInstrumentedTest.java
Player/AndroidCommon/src/main/: AndroidManifest.xml
Player/AndroidCommon/src/test/java/com/free/androidcommon/: ExampleUnitTest.java
Player/JavaCommon/src/main/java/com/free/javacommon/: MyClass.java
Player/KPlayer/: .gitignore  build.gradle
Player/KPlayer/src/main/cpp/: CMakeLists.txt  native-lib.cpp  test-lib.cpp
Player/KPlayer/src/main/cpp/player/: CMakeLists.txt  main.cpp
Player/KPlayer/src/main/cpp/player/doc/: bit_area.txt  bit_field.c  struct.txt  union.txt
Player/KPlayer/src/main/cpp/player/src/cjson/: cJSON.h
Player/KPlayer/src/main/cpp/player/src/test/: test1.c  test1.cpp  test1.h  test2.c  test2.cpp  test2.h  test3.cpp  test3.h  test4.cpp  基类与派生类.cpp
Player/KPlayer/src/main/java/com/free/mplayer/: MainActivity.java  Test.java
Player/app/: build.gradle
Player/app/src/androidTest/java/com/free/mplayer/: ExampleInstrumentedTest.java
Player/app/src/main/: AndroidManifest.xml
Player/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Player/app/src/main/java/com/free/mplayer/: MainActivity.java
Player/app/src/test/java/com/free/mplayer/: ExampleUnitTest.java
Player/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/androidTest/java/com/media/learn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/media/learn/: BottomNavigationActivity.kt  FirstFragment.kt  MainActivity.kt  NavigationDrawerActivity.kt  SecondFragment.kt
app/src/main/java/com/media/learn/common/: BaseAppCompatActivity.kt
app/src/main/java/com/media/learn/util/: ThemeOverlayUtils.kt  ThemeUtils.kt  Util.kt
app/src/main/res/layout/: app_bar_navigation_drawer.xml  content_navigation_drawer.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: mobile_navigation.xml  mobile_navigation2.xml  nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v29/: themes.xml
app/src/test/java/com/media/learn/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
ijkplayer/: build.gradle  gradle.properties  settings.gradle
ijkplayer/gradle/wrapper/: gradle-wrapper.properties
ijkplayer/ijkplayer-example/: build.gradle
ijkplayer/ijkplayer-example/src/main/: project.properties
ijkplayer/mplayer/: build.gradle
ijkplayer/mplayer/src/androidTest/java/com/mplayer/android/: ExampleInstrumentedTest.java
ijkplayer/mplayer/src/main/: AndroidManifest.xml
ijkplayer/mplayer/src/main/java/com/mplayer/android/: App.java  MainActivity.java  VideoActivity.java
ijkplayer/mplayer/src/main/res/layout/: activity_main.xml  activity_player.xml  demo_file.xml  fragment_player.xml  fragment_video.xml  player_view_layout.xml  video_list_item.xml
ijkplayer/mplayer/src/main/res/menu/: menu_file_list.xml
ijkplayer/mplayer/src/main/res/values/: bool.xml  strings.xml  styles.xml  video_strings.xml
ijkplayer/mplayer/src/main/res/values-v19/: bool.xml
ijkplayer/mplayer/src/test/java/com/mplayer/android/: ExampleUnitTest.java
ksdl/: settings.gradle
ksdl/app/: build.gradle
ksdl/app/src/main/: AndroidManifest.xml
ksdl/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ksdl/app/src/main/cpp/SDL/src/: SDL_internal.h
ksdl/app/src/main/cpp/SDL/src/core/android/: SDL_android.c
ksdl/app/src/main/cpp/media/: media_bridge.cpp
ksdl/app/src/main/java/com/android/ksdl/: KMediaPlayer.java  MainActivity.java
ksdl/app/src/main/res/values/: strings.xml
ksdl/gradle/wrapper/: gradle-wrapper.properties
ksdl/sdl/: build.gradle
ksdl/sdl/jni/SDL/: include
ksdl/sdl/jni/src/: Android.mk
sdl/: settings.gradle
sdl/app/: build.gradle
sdl/app/src/androidTest/java/com/android/ksdl/: ExampleInstrumentedTest.java
sdl/app/src/main/cpp/: native-lib.cpp
sdl/app/src/main/java/com/android/ksdl/: MainActivity.java
sdl/app/src/test/java/com/android/ksdl/: ExampleUnitTest.java
sdl/sdl/: build.gradle
sdl/sdl/jni/SDL/: src
sdl/sdl/src/main/: AndroidManifest.xml
todo/: build.gradle  settings.gradle
todo/app/: build.gradle  fabric.properties
todo/app/src/androidTest/java/com/k/todo/: ExampleInstrumentedTest.kt
todo/app/src/main/: AndroidManifest.xml
todo/app/src/main/java/com/k/todo/: App.java  App.kt  HomeActivity.java  HomeActivity.kt  MainActivity.java  MainActivity.kt
todo/app/src/main/res/layout/: activity_home.xml  activity_main.xml  activity_main_layout.xml  app_bar_main.xml  content_main.xml  fragment_home.xml  fragment_main_item.xml  fragment_music_bottom.xml
todo/app/src/main/res/values/: dimens.xml  strings.xml
todo/app/src/test/java/com/k/todo/: ExampleUnitTest.kt
todo/gradle/wrapper/: gradle-wrapper.properties
todo/lightapp/: build.gradle
todo/lightapp/src/main/: AndroidManifest.xml
todo/lightapp/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_main.xml
todo/lightapp/src/main/res/menu/: menu_main.xml
todo/lightapp/src/main/res/values/: strings.xml
(+120 files in other folders)
